--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <h1>Welcome to the ML Model Deployment Website</h1>
+        <h1>Welcome to the testing</h1>
         <p>This website showcases our machine learning models and their capabilities.</p>
     </main>
     <footer>
