--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,7 @@ body {
 .navbar {
     background-color: #333;
     overflow: hidden;
+    min-height: 120px;
 }
 
 .navbar a {
@@ -12,9 +13,9 @@ body {
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 20px 16px;
     text-decoration: none;
-}
+    }
 
 .navbar a:hover {
     background-color: #ddd;
@@ -24,14 +25,14 @@ body {
 .dropdown {
     float: left;
     overflow: hidden;
-}
+ }
 
 .dropdown .dropbtn {
     font-size: 16px;
     border: none;
     outline: none;
     color: white;
-    padding: 14px 16px;
+    padding: 20px 16px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
