--- a/templates/base.html
+++ b/templates/base.html
@@ -8,57 +8,76 @@
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
     <link  href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <link  href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">DentAIry</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            About
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="classificationDropdown">
-                            <a class="dropdown-item" href="{{ url_for('about') }}">Our Project</a>
-                            <a class="dropdown-item" href="{{ url_for('literature_review') }}">Literature Review</a>
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top w-100">
+        <!-- Navbar Toggle Button on the Left -->
+        <button class="navbar-toggler order-1" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <!-- Brand Name in the Center -->
+        <div class="navbar-brand mx-auto order-0">
+            <a href="{{ url_for('index') }}">
+                DentAIry
+            </a>
+        </div>
+
+        
+        <!-- Profile Icon on the Right -->
+        <div class="profile-icon order-2">
+            <a class="nav-link" href="/profile"><i class="fas fa-user-circle"></i></a>
+        </div>
+
+        <!-- Navbar Links (Collapsible) -->
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                </li>
+                
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        About
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="classificationDropdown">
+                        <a class="dropdown-item" href="{{ url_for('about') }}">Our Project</a>
+                        <a class="dropdown-item" href="{{ url_for('literature_review') }}">Literature Review</a>
+                    </div>
+                </li>
+                
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="classificationDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Classification
+                    </a>
+                    <div class="dropdown-menu mega-menu" aria-labelledby="classificationDropdown">
+                        <div class="menu-section">
+                            <h6 style="margin: 10px">ResNet Models</h6>
+                            <a class="dropdown-item"href="{{ url_for('classification_resnet50') }}">ResNet50</a>
+                            <a class="dropdown-item disabled-link" href="#">ResNet101</a>
                         </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="classificationDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Classification
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="classificationDropdown">
-                            <a class="dropdown-item" href="{{ url_for('classification_resnet50') }}">ResNet50</a>
-                            <a class="dropdown-item disabled-link" href=#>ResNet101</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="modelDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Model
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="modelDropdown">
-                            <a class="dropdown-item" href="{{ url_for('model_architecture') }}">Architecture</a>
-                            <a class="dropdown-item" href="{{ url_for('model_history') }}">History</a>
-                            <a class="dropdown-item" href="{{ url_for('model_generate') }}">Generate</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="modelDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Model
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="modelDropdown">
+                        <a class="dropdown-item" href="{{ url_for('model_architecture') }}">Architecture</a>
+                        <a class="dropdown-item" href="{{ url_for('model_history') }}">History</a>
+                        <a class="dropdown-item" href="{{ url_for('model_generate') }}">Generate</a>
+                    </div>
+                </li>
+            </ul>          
         </div>
     </nav>
-    <div class="container" style="padding: 40px">
-        {% block content %}{% endblock %}
-    </div>
+    {% block content %}{% endblock %}
     <script src="{{ url_for('static', filename='js/scripts.js') }}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>
 </body>
