--- a/templates/resnet50.html
+++ b/templates/resnet50.html
@@ -1,6 +1,50 @@
 {% extends "base.html" %}
 {% block content %}
+<link  href="{{ url_for('static', filename='css/classification.css') }}" rel= "stylesheet">
 <h1>ResNet50 Classification</h1>
+
+<div class="container">
+    <div class="row">
+        <!-- Left Section (70%) -->
+        <div class="col-md-8 image-upload-section">
+            <form id="upload-file-resnet50" method="post" enctype="multipart/form-data">
+                <label for="imageUpload" class="upload-label">Drag an image here or choose from file</label>
+                <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg" onchange="previewImage(event)">
+            </form>
+            
+            <div class="image-preview-box">
+                <div id="imagePreview"></div>
+            </div>
+        </div>
+
+        <!-- Right Section (30%) -->
+        <div class="col-md-4 classification-section">
+            <div class="classification-box">
+                <button type="button" class="btn btn-primary btn-lg" id="btn-predict2" onclick="classifyImage()">Classify</button>
+                <div id="result-box">
+                    <p id="prediction-result">Prediction will appear here</p>
+                    <!-- Option to validate the prediction -->
+                    <div id="validation-options" style="display: none;">
+                        <p>Is this prediction correct?</p>
+                        <button onclick="validatePrediction(true)">Yes</button>
+                        <button onclick="validatePrediction(false)">No</button>
+                        <input type="text" id="correction-input" placeholder="Enter correct class" style="display: none;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Full-width History Section -->
+<div class="history-section">
+    <h3>Classification History</h3>
+    <ul class="history-list" id="historyList">
+        <!-- History items will be added dynamically -->
+    </ul>
+</div>
+
+
 <div class="container">
     <div id = "content">
         <form id="upload-file-resnet50" method="post" enctype="multipart/form-data">
@@ -21,4 +65,5 @@
     </div>
 </div>
 
+<script src="{{ url_for('static', filename='js/classification.js') }}" type="text/javascript"></script>
 {% endblock %}
